<resources>
    <string name="app_name" translatable="false">DoaQu</string>
    <string name="app_dist" translatable="false">by Khaz ID</string>
    <string name="locale" translatable="false">in_ID</string>
    <string name="authority_suggest_search" translatable="false">com.khazasid.android.doaqu.SuggestionProvider</string>
    <string name="doaqu_pref" translatable="false">DOAQU_PREFERENCES</string>
    <string name="first_time_pref" translatable="false">FIRST_LAUNCH</string>
    <string name="acces_time_preferences" translatable="false">ACCES_TIME</string>
    <string name="version_name_format">Versi %1$s</string>
    <string name="translate_doa" translatable="false">\"%1$s\"</string>
    <string name="arab_cv_pref" translatable="false">ARAB_CV_PREF</string>
    <string name="latin_cv_pref" translatable="false">LATIN_CV_PREF</string>
    <string name="translate_cv_pref" translatable="false">TRANSLATE_CV_PREF</string>
    <string name="on_language_change" translatable="false">ON_LANGUAGE_CHANGE</string>
    <string name="database_name" translatable="false">Doas.db</string>
    <string name="ads_not_shown_message">Kami bergantung pada Iklan untuk pengembangan aplikasi ini, terima kasih atas dukungannya.</string>
    <string name="tab_doa">Doa</string>
    <string name="tab_bookmark">Bookmark</string>
    <string name="search_hint">Cari Doa&#8230;</string>
    <string name="action_dark_mode">Mode gelap</string>
    <string name="action_share_app">Bagikan DoaQu</string>
    <string name="action_rate_us">Rating DoaQu</string>
    <string name="action_privacy_policy">Kebijakan privasi</string>
    <string name="doa_footnote_example">(QS. Al-Mu\'minuun [23]: 118)</string>
    <string name="doa_title_example">Doa Agar Termasuk Golongan Orang Beriman</string>
    <string name="doa_translate_example">Ya Rabbku, berikanlah kepadaku ilmu dan masukkanlah aku ke dalam golongan orang-orang yang shalih, dan jadikanlah aku buah tutur yang baik bagi orang-orang (yang datang) kemudian, dan jadikanlah aku termasuk orang yang mewarisi Surga yang penuh kenikmatan. dan janganlah Engkau hinakan aku pada hari mereka dibangkitkan</string>
    <string name="doa_arab_example">رَبِّ هَبْ لِی حُکْمًاوَّأَلْحِقْنِی بِالصّٰلِحِيْنَ وَاجْعَلْ لِّی لِسَانَ صِدْقٍ فِی الْأَخِرِيْنَ وَاجْعَلْنِی مِنْ وَّرَثَةِجَنَّةِالنَّعِيْمِ۰وَلَاتُخْزِنِی يَوْمَ يُبْعَثُوْنَ</string>
    <string name="doa_latin_example">Robbi Hablii hukmawwa alhiqnii bishoolihiina waj\'alli lisaani shidqim fil aakhiriina waj\'alnii miwwaro tsati jannati nna\'iim. Wa laa tukhzinii yauma yub\'atsuun.</string>
    <string name="title_doa_arab">Teks Arab</string>
    <string name="latin_doa_arab">Teks Latin</string>
    <string name="translate_doa_arab">Teks Translasi</string>
    <string name="number_content_description">nomor doa</string>
    <string name="bookmark_content_desription">doa bookmark</string>
    <string name="shared_doa_title">Bagi doa ke</string>
    <string name="bookmarked">Bookmark</string>
    <string name="unbookmarked">Hapus Bookmark</string>
    <string name="bookmark_empty">Maaf, bookmark kosong</string>
    <string name="doa_empty">Refresh atau restart untuk memuat data</string>
    <string name="shared_doaqu_title">Bagi DoaQu ke</string>
    <string name="shared_doaqu_subject">Download DoaQu | Sesuai Quran dan Hadits</string>
    <string name="shared_doaqu_text">DoaQu | Sesuai Quran dan Hadits\n\nDownload : https://play.google.com/store/apps/details?id=com.khazasid.android.doaqu</string>
    <string name="search_empty">Tidak ada hasil dari \'%1$s\'</string>
    <string name="search_result">Hasil: %1$d</string>
    <string name="saved_dark_mode_key" translatable="false">theme_preference</string>
    <string name="on_active_app_key" translatable="false">on_active</string>
    <string name="press_back_again">Tekan sekali lagi untuk keluar</string>
    <string name="doa_category_example">Doa-Doa dari Al-Qur-an</string>
    <string name="notification_title">DoaQu: Assalaamu\'alaikum</string>
    <string name="notification_content">Yuk, mulai harimu dengan berdoa agar hidupmu menjadi berkah</string>
    <string name="read_random_doa">Baca Doa Acak</string>
    <string name="read_doa">Baca Doa</string>
    <string name="navigation_drawer_open">Buka navigasi sisi</string>
    <string name="navigation_drawer_close">Tutup navigasi sisi</string>
    <string name="navbar_title_terkabul_doa">Syarat Terkabul Doa</string>
    <string name="nav_bar_menu_title_adab_dan_sebab">Adab dan Sebab</string>
    <string name="nav_bar_menu_title_waktu_keadaan_tempat">Waktu, Keadaan dan Tempat</string>
    <string name="nav_bar_menu_title_penghalang">Penghalang</string>
    <string name="navbar_title_others">Lain-lain</string>
    <string name="nav_bar_menu_title_settings">Pengaturan</string>
    <string name="nav_bar_menu_title_rate_us">Beri rating!</string>
    <string name="adab_title">Adab dan Sebab Terkabulnya Doa</string>
    <string-array name="adab_content">
        <item>Ikhlas berdoa karena Allah semata</item>
        <item>Mengawali doa dengan pujian dan sanjungan kepada Allah, diikuti dengan membaca shalawat kepada Rasulullah shalallahu \'alaihi wasalam, dan diakhiri dengan cara yang sama</item>
        <item>Bersungguh-sungguh dalam berdoa, serta yakin bahwa setiap permohonan yang dipanjatkan pasti akan dikabulkan oleh Allah</item>
        <item>Mendesak dengan penuh tawadhu atau kerendahan hati saat berdoa dan tidak terburu-buru memohonkannya</item>
        <item>Menghadirkan hati dalam doa</item>
        <item>Memanjatkan doa baik saat dalam keadaan lapang maupun ketika susah</item>
        <item>Tidak boleh berdoa dan memohon sesuatu kecuali kepada Allah semata.</item>
        <item>Tidak mendoakan keburukan bagi keluarga, harta, anak, dan diri sendiri</item>
        <item>Merendahkan suara ketika berdoa, yaitu antara samar-samar dan keras</item>
        <item>Mengakui dosa yang telah diperbuat, kemudian memohon ampunan atasnya, serta mengakui segala nikmat yang telah diterima, dan bersyukur kepada Allah atas nikmat tersebut</item>
        <item>Tidak perlu membebani diri dengan membuat sajak dalam berdoa</item>
        <item>Tadharru\' (merendahkan diri), khusyu\', raghbah (berharap untuk dikabulkan) dan rahbah (rasa takut tidak dikabulkan)</item>
        <item>Mengembalikan hak orang lain yang dizhalimi disertai dengan taubat</item>
        <item>Memanjatkan doa tiga kali</item>
        <item>Menghadap kiblat</item>
        <item>Memanjatkan doa dengan mengangkat kedua tangan</item>
        <item>Jika mungkin, hendaklah berwudhu terlebih dahulu sebelum memanjatkan doa kepada Allah</item>
        <item>Tidak boleh berlebih-lebihan dalam berdoa</item>
        <item>Bertawassul kepada Allah dengan Asmaa\'ul Husna dan sifat-sifat-Nya yang Mahatinggi, atau dengan amal shahih yang pernah dikerjakan sendirian atau dengan doa seorang shalih yang masih hidup dan berada dihadapannya</item>
        <item>Setiap makanan dan minuman yang dikonsumsi serta pakaian yang dikenakan harus berasal dari usaha yang halal</item>
        <item>Tidak berdoa untuk suatu dosa atau untuk memutus silaturrahmi</item>
        <item>Menjauhi segala macam kemaksiatan</item>
        <item>Harus menegakkan amar ma\'ruf nahi munkar, yaitu dengan cara menyuruh kepada suatu kebaikan serta mencegah dari suatu kemungkaran</item>
        <item>Disunnahkan memulai doa dengan mendoakan diri sendiri, baru kemudian mendoakan orang lain</item>
    </string-array>
    <string-array name="ref_adab">
        <item>1) Al-Mu\'min ayat 14 dan Al-Bayyinah ayat 5</item>
        <item>9) Shahiih al-Adzkaar (II/955&#8211;969) karya an-Nawawi</item>
        <item>12) Ad-Da\' wad Dawaa (hlm. 14&#8211;21) karya Ibnul Qayyim</item>
        <item>17) Ad-Du\'aa (hlm. 7&#8211;32) karya Husain Awayisyah</item>
        <item>19) Ad-Du\'aa (hlm. 37&#8211;52, 85&#8211;90) karya Muhammad Ibrahim al-Hamd</item>
        <item>24) An-Nubadz al-Mustathaabah fi ad-Da\'awaatil Mustajaabah (hlm. 26&#8211;47) karya Syaikh Salim bin Ied al-Hilali</item>
        <item>\n* At-Tawassul Anwaa\'uhu wa Ahkaamuhu karya Syaikh Muhammad Nashiruddin al-Albani</item>
        <item>* Tash-hiihud Du\'aa (hlm. 21&#8211;35) karya Syaikh Bakr bin Abdullah Abu Zaid</item>
        <item>* Al-A\'raf ayat 55 dan 205</item>
        <item>* HR. Al-Bukhari (no. 4323)</item>
        <item>* Al-Anbiyaa\' ayat 90</item>
        <item>* Syarhun Nawawi lish Shahiih Muslim (XV/144)</item>
    </string-array>
    <string name="waktu_title">Waktu, Keadaan, dan Tempat Terkabulnya Doa</string>
    <string name="app_header">Aplikasi</string>
    <string name="about_header">Tentang</string>
    <string name="dark_title">Mode gelap</string>
    <string name="privacy_policy_title">Kebijakan privasi</string>
    <string name="other_apps_title">Aplikasi lain</string>
    <string name="dark_summary_on">Aktif</string>
    <string name="dark_summary_off">Tidak Aktif</string>
    <string name="click_for_read_summary">Baca</string>
    <string name="by_khazasid_summary">Khaz ID</string>
    <string name="privacy_policy_url">https://doaqu.flycricket.io/privacy.html</string>
    <string name="dark_mode_pref">dark_mode_pref</string>
    <string name="other_apps_pref">other_apps_pref</string>
    <string name="drop_down_teks_arab_cd">drop down teks arab</string>
    <string name="drop_down_teks_latin_cd">drop down teks latin</string>
    <string name="drop_down_teks_translasi_cd">drop down teks translasi</string>
</resources>