<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/app_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="@string/dark_mode_pref"
            app:title="@string/dark_title"
            app:iconSpaceReserved="false"
            app:summaryOff="@string/dark_summary_off"
            app:summaryOn="@string/dark_summary_on"
            app:defaultValue="false"/>

        <!--<EditTextPreference-->
            <!--app:key="signature"-->
            <!--app:title="@string/signature_title"-->
            <!--app:useSimpleSummaryProvider="true" />-->

        <!--<ListPreference-->
            <!--app:defaultValue="reply"-->
            <!--app:entries="@array/reply_entries"-->
            <!--app:entryValues="@array/reply_values"-->
            <!--app:key="reply"-->
            <!--app:title="@string/reply_title"-->
            <!--app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header"
        app:iconSpaceReserved="false">

        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy_title"
            android:summary="@string/click_for_read_summary"
            app:iconSpaceReserved="false">
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/privacy_policy_url" />
        </Preference>

        <Preference
            app:key="@string/other_apps_pref"
            app:title="@string/other_apps_title"
            android:summary="@string/by_khazasid_summary"
            app:iconSpaceReserved="false" />

        <!--<SwitchPreferenceCompat-->
            <!--app:key="sync"-->
            <!--app:title="@string/sync_title" />-->

        <!--<SwitchPreferenceCompat-->
            <!--app:dependency="sync"-->
            <!--app:key="attachment"-->
            <!--app:summaryOff="@string/attachment_summary_off"-->
            <!--app:summaryOn="@string/attachment_summary_on"-->
            <!--app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
