<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/detail_doa_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="92dp">

        <androidx.cardview.widget.CardView
            style="@style/cardViewStyle"
            android:id="@+id/arab_doa_cv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/cardContent"
                    android:id="@+id/doa_arab"
                    tools:text="@string/doa_arab_example"
                    android:layout_below="@id/arab_arrow_down"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="?attr/primaryTextColor"
                    android:layout_alignParentEnd="true"/>

                <TextView
                    style="@style/cardTitle"
                    android:text="@string/title_doa_arab"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/arab_arrow_down"
                    style="@style/downUpImageButton"
                    android:contentDescription="@string/drop_down_teks_arab_cd"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/cardViewStyle"
            android:id="@+id/latin_doa_cv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/doa_latin"
                    style="@style/cardContent"
                    android:layout_below="@id/latin_arrow_down"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="?attr/secondaryTextColor"
                    tools:ignore="TextContrastCheck"
                    tools:text="@string/doa_latin_example" />

                <TextView
                    style="@style/cardTitle"
                    android:text="@string/latin_doa_arab"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/latin_arrow_down"
                    style="@style/downUpImageButton"
                    android:contentDescription="@string/drop_down_teks_latin_cd"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/cardViewStyle"
            android:id="@+id/translate_doa_cv">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    style="@style/cardContent"
                    android:id="@+id/doa_translate"
                    tools:text="@string/doa_translate_example"
                    android:layout_below="@id/translate_arrow_down"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="?attr/primaryTextColor"/>

                <TextView
                    style="@style/cardTitle"
                    android:text="@string/translate_doa_arab"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/translate_arrow_down"
                    style="@style/downUpImageButton"
                    android:contentDescription="@string/drop_down_teks_translasi_cd"
                    tools:ignore="TouchTargetSizeCheck" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/ads_shown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>

