<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="?attr/selectableItemBackground" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/primaryTextColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        tools:text="@string/doa_title_example"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tvTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/ivBookmark"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?attr/secondaryTextColor"
        tools:ignore="TextContrastCheck"
        tools:text="@string/doa_translate_example" />

    <TextView
        android:id="@+id/tvFootnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTranslate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="?attr/secondaryTextColor"
        tools:ignore="TextContrastCheck"
        tools:text="@string/doa_footnote_example" />

    <ImageView
        android:id="@+id/ivBookmark"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@id/tvTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/bookmark_content_desription"
        app:srcCompat="@drawable/ic_star_accent_24dp"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>